# Django_Project_Template_for_python-language-server

./: .gitignore  README.md  db.sqlite3  pyproject.toml
hello/: urls.py  views.py
hello/templates/hello/: hello_there.html
web_app/: settings.py  urls.py
